# VolleyBolley

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  api.http  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  ruff.toml
backend/apps/admin_panel/: constants.py  exceptions.py  f_upload_v2.py  forms.py  messages.py  model_mappings.py  parsers.py  services.py  settings.py  urls.py  views.py
backend/apps/api/: enums.py  exceptions.py  filters.py  middlewares.py  pipeline.py  serializers.py  urls.py  utils.py  views.py
backend/apps/authentication/: enums.py  exceptions.py  middlewares.py  pipeline.py  serializers.py  urls.py  utils.py  views.py
backend/apps/core/: admin.py  apps.py  base.py  constants.py  enums.py  models.py  permissions.py  serializers.py  signals.py  task.py  utils.py  utlis.py  views.py
backend/apps/courts/: admin.py  constants.py  enums.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/data/: models.py
backend/apps/event/: admin.py  apps.py  enums.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  utils.py  views.py
backend/apps/location/: enums.py  mixins.py  models.py
backend/apps/locations/: admin.py  constants.py  models.py  serializers.py  views.py
backend/apps/notifications/: admin.py  apps.py  constants.py  exceptions.py  inspectors.py  messages.py  models.py  notifications.py  push_service.py  serializers.py  signals.py  task_manager.py  tasks.py  urls.py  utils.py  views.py
backend/apps/players/: __init__.py  admin.py  apps.py  constants.py  enums.py  exceptions.py  filters.py  models.py  pipeline.py  rating.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/apps/users/: admin.py  apps.py  enums.py  models.py  serializers.py  utils.py
backend/data/: cities.xlsx  countries.xlsx  courts.xlsx  currencies.xlsx  default_faq.md  games.xlsx  levels.xlsx  test_db_data.json  test_locations.json
backend/firebase/: fcm_service_account.json.example
backend/static/: index.html
backend/static/index_files/: style.css
backend/templates/: base.html  index.html  privacy.html  terms.html
backend/templates/admin_panel/: admin_dashboard.html  notifications.html  upload.html
backend/templates/includes/: footer.html
backend/tests/: conftest.py  test_court_model.py  test_currencies_api.py  test_dailystats.py  test_device_model.py  test_event_model.py  test_faq.py  test_fcm_api.py  test_fileupload_service.py  test_locations.py  test_management_commands.py  test_player_filters.py  test_player_model.py  test_rating_system.py  test_tourney.py  test_user_auth.py  test_user_model.py  test_user_registration.py
backend/tests/fixtures/: auth.py  core.py  courts.py  dailystats.py  fileupload_service.py  games.py  inspectors.py  locations.py  notifications.py  players.py  push_service.py  tourneys.py  users.py
backend/tests/test_auth/: test_auth_login.py  test_auth_logout.py  test_token.py
backend/tests/test_core/: test_faq.py  test_notificationstime_model.py
backend/volleybolley/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+47 files in other folders)
