[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Киприн Вячеслав",email = "kiprinvs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==5.2.1)",
    "djangorestframework (==3.16.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-phonenumber-field[phonenumberslite] (>=8.1.0,<9.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "djangorestframework-simplejwt (==5.3.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pytest = "^8.4.0"
pytest-django = "^4.11.1"

